oya/warehouse/iac/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oya-warehouse
  labels:
    app: oya-warehouse
    sap-code: "EWM"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oya-warehouse
  template:
    metadata:
      labels:
        app: oya-warehouse
    spec:
      containers:
        - name: service
          image: registry.example/oya-warehouse:0.1.0
          ports:
            - name: h3
              containerPort: 8443
